# MDML

./: .gitignore  Alligner.py  Createfolders.py  ImageTrasformation.py  MANIFEST.in  MachineLearning.py  Mapper.py  Mapping.py  MultiStats.py  Multivariate_Stats_EGFR.ipynb  Preprocces.py  README.md  The_great_eye.ipynb  TrajectoryTools.py  Vision.py  Vision2.py  create_folders.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py
Allign/: __init__.py
Deeplearn/: setup.py
Examples/: MD_ML.ipynb  Multivariate_Stats_EGFR.ipynb  Pipeline_tutorial.ipynb  Vision_tutorial.ipynb
MDML.egg-info/: PKG-INFO
Pipeline/: MachineLearning.py  Mapping.py  Preprocces.py
Retrace/: Mapper.py  __init__.py  plot.py
TrajectoryTools/: __init__.py
Vision/: __init__.py  cam.py
scr/MachineLearning/: setup.py
scr/Preprosses/: TrajectoryTools.py
scr/Utils/: ImageTrasformation.py  Yamlhandler.py
src/MDML.egg-info/: PKG-INFO
src/mdml/Allign/: __init__.py
src/mdml/Deeplearn/: __init__.py  plot.py  setup.py
src/mdml/Pipeline/: Mapping.py  Preprocces.py  __init__.py  argparser.py  example_config.yml  machine_learning.py  main.py
src/mdml/TrajectoryTools/: __init__.py  parse.py  tools.py
src/mdml/Utils/: __init__.py  utils.py
src/mdml/Vision/: __init__.py  cam.py  saliency_map.py
