[project]
name = "MD_ML"
version = "0.0.1"
authors = [
  { name="Stylianos Mavrianos", email="stylianosmavrianos@gmail.com" }]
description = "A first approach on the application of Deep Learning on Molecular Dynamics Trajectories"
readme =  "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/StevetheGreek97/MD_ML"
"Bug Tracker" = "https://github.com/StevetheGreek97/MD_ML/issues"